--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <a href="http://thecodingcarlson.github.io/Hangman/"><img class="img-responsive project-img grayscale" src="img/hangman.png" /></a>
                         </div>
                         <div class="project-content col-md-6">
-                            <h3>Hangman</h3>
+                            <h3>Hangman -<small><a class="project-links" href="https://github.com/TheCodingCarlson/Hangman"> Github Repo</a></small></h3>
                             <p>This was my first project during my time in General Assembly. I wanted to re-make the classic word guessing game with a Western twist. My main focus of this project was to make something functional that looked good, but that was also fun to play. Made using jQuery, Javascript, CSS, HTML, Lazy Line Painter and the Wordnik API.</p>
                         </div>
                     </div>
@@ -121,7 +121,7 @@
                             <a href="https://musicians-meetup.herokuapp.com/"><img class="img-responsive project-img" src="img/mm.png" /></a>
                         </div>
                         <div class="project-content col-md-6">
-                            <h3>Musicians Meet-Up</h3>
+                            <h3>Musicians Meet-Up -<small><a class="project-links" href="https://github.com/TheCodingCarlson/musicians_meetup"> Github Repo</a></small></h3>
                             <p>Musicians Meet-Up was inspired by my desire to create a social site where musicians of all levels could connect and collaborate. Inspired by aspects of Facebook and Craigslist, users are able sign-up and create a profile. They can also create and respond to posts in the Classifieds section and search through all users (the community). Made using Express/Node.js, Sequelize, HTML, CSS, JavaScript, jQuery, Bootstrap, Cloudinary and Mailgun.js.</p>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                             <a href="https://concrt.herokuapp.com/"><img class="img-responsive project-img" src="img/concrt.png" /></a>
                         </div>
                         <div class="project-content col-md-6">
-                            <h3>Concrt</h3>
+                            <h3>Concrt -<small><a class="project-links" href="https://github.com/TheCodingCarlson/concrt"> Github Repo</a></small></h3>
                             <p>My first and only group project at GA. Concrt is a full stack web application that allows users to discover and share local concerts using the Jambase API. Concerts can also be saved to a user calendar that can be referenced from the user profile. Made using Ruby on Rails, PostgreSQL, Ruby, HTML, CSS, JavaScript, jQuery, Bootstrap, D3.js and the Jambase API.</p>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                             <a href="https://harmonize2.herokuapp.com/"><img class="img-responsive project-img" src="img/harmonize.png" /></a>
                         </div>
                         <div class="project-content col-md-6">
-                            <h3>Harmonize</h3>
+                            <h3>Harmonize -<small><a class="project-links" href="https://github.com/TheCodingCarlson/harmonize"> Github Repo</a></small></h3>
                             <p>A chord helper app that allows users to pick a starting note and chord quality, and from there suggests chords that would make sense to go to next in a progression. Users can save favorite progressions to their profile for future reference. Made using Angular.js, Express/Node.js, MongoDB, HTML, CSS, JavaScript, Bootstrap, and Teoria.js.</p>
                         </div>
                     </div>
