adding responsive design

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <section id="work" class="content-section text-center">
         <div class="download-section">
             <div class="container">
-                    <h2>Work</h2>
+                    <h2 id="work">Work</h2>
                     <div class="project-row row">
                         <div class="col-md-5">
                             <a href="http://thecodingcarlson.github.io/Hangman/"><img class="img-responsive project-img grayscale" src="img/hangman.png" /></a>
