--- a/index.html
+++ b/index.html
@@ -106,42 +106,41 @@
     <section id="work" class="content-section text-center">
         <div class="download-section">
             <div class="container">
-                    <h2 id="work">Work</h2>
-                    <div class="project-row row">
-                        <div class="col-md-5">
-                            <a href="http://thecodingcarlson.github.io/Hangman/"><img class="img-responsive project-img grayscale" src="img/hangman.png" /></a>
-                        </div>
-                        <div class="project-content col-md-6">
-                            <h3>Hangman -<small><a class="project-links" href="https://github.com/TheCodingCarlson/Hangman"> Github Repo</a></small></h3>
-                            <p>This was my first project during my time at General Assembly. I wanted to re-make the classic word guessing game and add a Western twist. My main focus of this project was to make something functional that looked good, but was also fun to play. Made using jQuery, Javascript, CSS, HTML, Lazy Line Painter and the Wordnik API.</p>
-                        </div>
+                <h2 id="work">Work</h2>
+                <div class="project-row row">
+                    <div class="col-md-5">
+                        <a href="https://harmonize2.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/harmonize.png" /></a>
                     </div>
-                    <div class="project-row row">
-                        <div class="col-md-5">
-                            <a href="https://musicians-meetup.herokuapp.com/"><img class="img-responsive project-img" src="img/mm.png" /></a>
-                        </div>
-                        <div class="project-content col-md-6">
-                            <h3>Musicians Meet-Up -<small><a class="project-links" href="https://github.com/TheCodingCarlson/musicians_meetup"> Github Repo</a></small></h3>
-                            <p>Musicians Meet-Up is an app where musicians of all levels can connect and collaborate. Inspired by aspects of Facebook and Craigslist, users are able sign-up and create a profile. They can create and respond to posts in the Classifieds section and also search through all the users (the community). Made using Express/Node.js, Sequelize, HTML, CSS, JavaScript, jQuery, Bootstrap, Bcrypt, Cloudinary and Mailgun.js.</p>
-                        </div>
+                    <div class="project-content col-md-6">
+                        <h3>Harmonize -<small><a class="project-links" href="https://github.com/TheCodingCarlson/harmonize"> Github Repo</a></small></h3>
+                        <p>Harmonize is a chord helper app that allows users to pick a starting note and chord quality, and from there suggests chords that would make sense to go to next in a progression. I wanted to create a tool for people that know some chords, but aren't really sure how to put them together in a practical and musical way.Users can save favorite progressions to their profile for future reference. Made using Angular.js, Express/Node.js, MongoDB, HTML, CSS, JavaScript, Bootstrap and Teoria.js.</p>
                     </div>
-                    <div class="project-row row">
-                        <div class="col-md-5">
-                            <a href="https://concrt.herokuapp.com/"><img class="img-responsive project-img" src="img/concrt.png" /></a>
-                        </div>
-                        <div class="project-content col-md-6">
-                            <h3>Concrt -<small><a class="project-links" href="https://github.com/TheCodingCarlson/concrt"> Github Repo</a></small></h3>
-                            <p>My first and only group project at GA. Concrt is a full stack web application that allows users to discover and share local concerts using the Jambase API. Concerts can be saved to a user calendar that can be referenced from the user profile. Users can also "follow" eachother and these relationships are displayed on their profile page. Made using Ruby, Rails, PostgreSQL, HTML, CSS, JavaScript, jQuery, Bootstrap, D3.js and the Jambase API.</p>
-                        </div>
+                </div>
+                <div class="project-row row">
+                    <div class="col-md-5">
+                        <a href="https://musicians-meetup.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/mm.png" /></a>
                     </div>
-                    <div class="project-row row">
-                        <div class="col-md-5">
-                            <a href="https://harmonize2.herokuapp.com/"><img class="img-responsive project-img" src="img/harmonize.png" /></a>
-                        </div>
-                        <div class="project-content col-md-6">
-                            <h3>Harmonize -<small><a class="project-links" href="https://github.com/TheCodingCarlson/harmonize"> Github Repo</a></small></h3>
-                            <p>Harmonize is a chord helper app that allows users to pick a starting note and chord quality, and from there suggests chords that would make sense to go to next in a progression. I wanted to create a tool for people that know some chords, but aren't really sure how to put them together in a practical and musical way.Users can save favorite progressions to their profile for future reference. Made using Angular.js, Express/Node.js, MongoDB, HTML, CSS, JavaScript, Bootstrap and Teoria.js.</p>
-                        </div>
+                    <div class="project-content col-md-6">
+                        <h3>Musicians Meet-Up -<small><a class="project-links" href="https://github.com/TheCodingCarlson/musicians_meetup"> Github Repo</a></small></h3>
+                        <p>Musicians Meet-Up is an app where musicians of all levels can connect and collaborate. Inspired by aspects of Facebook and Craigslist, users are able sign-up and create a profile. They can create and respond to posts in the Classifieds section and also search through all the users (the community). Made using Express/Node.js, Sequelize, HTML, CSS, JavaScript, jQuery, Bootstrap, Bcrypt, Cloudinary and Mailgun.js.</p>
+                    </div>
+                </div>
+                <div class="project-row row">
+                    <div class="col-md-5">
+                        <a href="http://thecodingcarlson.github.io/Hangman/" target="_blank"><img class="img-responsive project-img grayscale" src="img/hangman.png" /></a>
+                    </div>
+                    <div class="project-content col-md-6">
+                        <h3>Hangman -<small><a class="project-links" href="https://github.com/TheCodingCarlson/Hangman"> Github Repo</a></small></h3>
+                        <p>This was my first project during my time at General Assembly. I wanted to re-make the classic word guessing game and add a Western twist. My main focus of this project was to make something functional that looked good, but was also fun to play. Made using jQuery, Javascript, CSS, HTML, Lazy Line Painter and the Wordnik API.</p>
+                    </div>
+                </div>
+                <div class="project-row row">
+                    <div class="col-md-5">
+                        <a href="https://concrt.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/concrt.png" /></a>
+                    </div>
+                    <div class="project-content col-md-6">
+                        <h3>Concrt -<small><a class="project-links" href="https://github.com/TheCodingCarlson/concrt"> Github Repo</a></small></h3>
+                        <p>My first and only group project at GA. Concrt is a full stack web application that allows users to discover and share local concerts using the Jambase API. Concerts can be saved to a user calendar that can be referenced from the user profile. Users can also "follow" eachother and these relationships are displayed on their profile page. Made using Ruby, Rails, PostgreSQL, HTML, CSS, JavaScript, jQuery, Bootstrap, D3.js and the Jambase API.</p>
                     </div>
                 </div>
             </div>
