adding last fm d3

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Harmonize -<small><a class="project-links" href="https://github.com/TheCodingCarlson/harmonize"> Github Repo</a></small></h3>
-                        <p>Harmonize is a chord helper app that allows users to pick a starting note and chord quality, and from there suggests chords that would make sense to go to next in a progression. I wanted to create a tool for people that know some chords, but aren't really sure how to put them together in a practical and musical way.Users can save favorite progressions to their profile for future reference. Made using AngularJS, Express/NodeJS, MongoDB, HTML, CSS, JavaScript, Bootstrap and TeoriaJS.</p>
+                        <p>Harmonize is a chord helper app that allows users to pick a starting note and chord quality, and from there suggests chords that would make sense to go to next in a progression. I wanted to create a tool for people that know some chords, but aren't really sure how to put them together in a practical and musical way.Users can save favorite progressions to their profile for future reference. Made using AngularJS, Express/NodeJS, MongoDB, HTML5, CSS3, JavaScript, Bootstrap and TeoriaJS.</p>
                     </div>
                 </div>
                 <div class="project-row row">
@@ -124,7 +124,7 @@
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Musicians Meet-Up -<small><a class="project-links" href="https://github.com/TheCodingCarlson/musicians_meetup"> Github Repo</a></small></h3>
-                        <p>Musicians Meet-Up is an app where musicians of all levels can connect and collaborate. Inspired by aspects of Facebook and Craigslist, users are able sign-up and create a profile. They can create and respond to posts in the Classifieds section and also search through all the users (the community). Made using Express/NodeJS, Sequelize, HTML, CSS, JavaScript, jQuery, Bootstrap, Bcrypt, Cloudinary and MailgunJS.</p>
+                        <p>Musicians Meet-Up is an app where musicians of all levels can connect and collaborate. Inspired by aspects of Facebook and Craigslist, users are able sign-up and create a profile. They can create and respond to posts in the Classifieds section and also search through all the users (the community). Made using Express/NodeJS, Sequelize, HTML5, CSS3, JavaScript, jQuery, Bootstrap, Bcrypt, Cloudinary and MailgunJS.</p>
                     </div>
                 </div>
                 <div class="project-row row">
@@ -133,7 +133,7 @@
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Hangman -<small><a class="project-links" href="https://github.com/TheCodingCarlson/Hangman"> Github Repo</a></small></h3>
-                        <p>This was my first project during my time at General Assembly. I wanted to re-make the classic word guessing game and add a Western twist. My main focus of this project was to make something functional that looked good, but was also fun to play. Made using jQuery, Javascript, CSS, HTML, Lazy Line Painter and the Wordnik API.</p>
+                        <p>This was my first project during my time at General Assembly. I wanted to re-make the classic word guessing game and add a Western twist. My main focus of this project was to make something functional that looked good, but was also fun to play. Made using jQuery, Javascript, CSS3, HTML5, Lazy Line Painter and the Wordnik API.</p>
                     </div>
                 </div>
                 <div class="project-row row">
@@ -142,7 +142,16 @@
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Concrt -<small><a class="project-links" href="https://github.com/TheCodingCarlson/concrt"> Github Repo</a></small></h3>
-                        <p>My first and only group project at GA. Concrt is a full stack web application that allows users to discover and share local concerts using the Jambase API. Concerts can be saved to a user calendar that can be referenced from the user profile. Users can also "follow" eachother and these relationships are displayed on their profile page. Made using Ruby, Rails, PostgreSQL, HTML, CSS, JavaScript, jQuery, Bootstrap, D3JS and the Jambase API.</p>
+                        <p>My first and only group project at GA. Concrt is a full stack web application that allows users to discover and share local concerts using the Jambase API. Concerts can be saved to a user calendar that can be referenced from the user profile. Users can also "follow" eachother and these relationships are displayed on their profile page. Made using Ruby, Rails, PostgreSQL, HTML5, CSS3, JavaScript, jQuery, Bootstrap, D3JS and the Jambase API.</p>
+                    </div>
+                </div>
+                <div class="project-row row">
+                    <div class="col-md-5">
+                        <a href="https://lastfmd3.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/lastfm.png" /></a>
+                    </div>
+                    <div class="project-content col-md-6">
+                        <h3>Last FM D3 -<small><a class="project-links" href="https://github.com/TheCodingCarlson/music-d3"> Github Repo</a></small></h3>
+                        <p>A side project I made to familiarize myself with the basic concepts of D3JS and SVG. I used the Last FM API to obtain the data for my charts and graphs. There are three sections to this project. The first allows you to search bands/artists and then renders a dynamic SVG bar graph of the 10 most popular albums for that artist by play count. The second section renders a bubble chart of the top 10 most popular artists/bands currently being streamed on Last FM. The third section shows a pie chart of the top 10 most played songs on the site. Made using HTML5, CSS3, AngularJS, D3JS, Bootstrap, NodeJS and the Last FM API.</p>
                     </div>
                 </div>
                 <div class="project-row row">
@@ -151,7 +160,7 @@
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Jeopardy React -<small><a class="project-links" href="https://github.com/TheCodingCarlson/jeopardy_react"> Github Repo</a></small></h3>
-                        <p>A small project I made to familiarize myself with the basic concepts of ReactJS. I used the jService API to generate the random question data and also used Swipe to enable swiping back and forth between questions and answers (Please Note: Swiping only works on mobile devices). Made using ReactJS, Swipe, jService, Bootstrap, Javascript, jQuery, HTML and CSS</p>
+                        <p>A small project I made to familiarize myself with the basic concepts of ReactJS. I used the jService API to generate the random question data and also used Swipe to enable swiping back and forth between questions and answers (Please Note: Swiping only works on mobile devices). Made using ReactJS, Swipe, jService, Bootstrap, Javascript, jQuery, HTML5 and CSS3</p>
                     </div>
                 </div>
             </div>
