--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Jeopardy React -<small><a class="project-links" href="https://github.com/TheCodingCarlson/jeopardy_react"> Github Repo</a></small></h3>
-                        <p>A small project I made to familiarize myself with the basic concepts of ReactJS. I used the jService API to generate the random question data and also used Swipe to enable swiping back and forth between questions and answers (Please Note: Swiping only works on mobile devices). Made using ReactJS, Swipe, jService, Bootstrap, Javascript, jQuery, HTML5 and CSS3</p>
+                        <p>An infinite scrolling trivia app I made using ReactJS. Random question data is generated from the jService API. Users can swipe back and forth between questions and answers (Please Note: Swiping only works on mobile devices). I used React Infinite to create the infinite scrolling/paging effect. Made using ReactJS, React Infinite, Swipe, jService, Bootstrap, Javascript, jQuery, HTML5 and CSS3.</p>
                     </div>
                 </div>
             </div>
